# usbbluetooth

./: README.md  meson.build
.github/workflows/: build.yml  codeql.yml
doc/: API_Python.md
src/bindings/csharp/UsbBluetooth/: UsbBluetoothDevice.cs  UsbBluetoothStatus.cs  UsbBluetoothWrapper.cs
src/bindings/python/: README.md  pyproject.toml
src/bindings/python/usbbluetooth/: _c_library.py  core.py
src/libusbbluetooth/: usbbluetooth.def  usbbluetooth_device.c  usbbluetooth_device.h  usbbluetooth_io.c  usbbluetooth_log.c
src/usbbt/: cmd_list.c  cmd_reset.c
